// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ActionButton color 1`] = `
<div>
  <div
    className="makeStyles-root-34"
  >
    <div
      className="makeStyles-wrapper-38"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-32 makeStyles-button-39 MuiButton-contained MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="makeStyles-titlePadding-35"
          >
            New Template
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    className="makeStyles-root-34"
  >
    <div
      className="makeStyles-wrapper-38"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-32 makeStyles-button-71 MuiButton-contained MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="makeStyles-titlePadding-35"
          >
            New Template
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots ActionButton disabled 1`] = `
<div>
  <div
    className="makeStyles-root-205"
  >
    <div
      className="makeStyles-wrapper-209"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-203 makeStyles-button-210 MuiButton-contained MuiButton-sizeSmall Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
          <span
            className="makeStyles-titlePaddingLeft-207"
          >
            New Template
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="makeStyles-root-205"
  >
    <div
      className="makeStyles-wrapper-209"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-203 makeStyles-button-241 MuiButton-contained MuiButton-sizeSmall Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="makeStyles-titlePadding-206"
          >
            New Template
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots ActionButton icons 1`] = `
<div>
  <div
    className="makeStyles-root-115"
  >
    <div
      className="makeStyles-wrapper-119"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-113 makeStyles-button-120 MuiButton-contained MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
          <span
            className="makeStyles-titlePaddingLeft-117"
          >
            New Template
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    className="makeStyles-root-115"
  >
    <div
      className="makeStyles-wrapper-119"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-113 makeStyles-button-161 MuiButton-contained MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="makeStyles-titlePaddingRight-118"
          >
            New Template
          </span>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots ActionButton loading 1`] = `
<div>
  <div
    className="makeStyles-root-297"
  >
    <div
      className="makeStyles-wrapper-301"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-295 makeStyles-button-302 MuiButton-contained MuiButton-sizeSmall Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
          <span
            className="makeStyles-titlePaddingLeft-299"
          >
            New Template
          </span>
        </span>
      </button>
      <div
        className="MuiCircularProgress-root makeStyles-buttonProgress-296 makeStyles-buttonProgress-303 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={19.5}
            strokeWidth={5}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="makeStyles-root-297"
  >
    <div
      className="makeStyles-wrapper-301"
    >
      <button
        className="MuiButtonBase-root MuiButton-root makeStyles-button-295 makeStyles-button-345 MuiButton-contained MuiButton-sizeSmall Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type={null}
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="makeStyles-titlePadding-298"
          >
            New Template
          </span>
        </span>
      </button>
      <div
        className="MuiCircularProgress-root makeStyles-buttonProgress-296 makeStyles-buttonProgress-346 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={19.5}
            strokeWidth={5}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
